--- a/frontend/templates/Gestionduneecole.html
+++ b/frontend/templates/Gestionduneecole.html
@@ -28,6 +28,8 @@
       <li><a href="{% url 'academics:year_list'    %}">Années scolaires</a></li>
       <li><a href="{% url 'academics:term_list'    %}">Semestres / Trimestres</a></li>
       <li><a href="{% url 'attendance:attendance_overview' %}">Attendance</a></li>
+      <li><a href="{% url 'attendance:attendance_mark' %}">Mark attendance</a></li>
+
 
       
 
