updating students with class

--- a/backend/students/templates/add_student.html
+++ b/backend/students/templates/add_student.html
@@ -25,7 +25,7 @@
       <label>Email: {{ form.email }}</label>
       <label>Guardian&nbsp;name: {{ form.guardian_name }}</label>
       <label>Guardian&nbsp;phone: {{ form.guardian_phone }}</label>
-      <label>Class&nbsp;level: {{ form.class_level }}</label>
+      <label>Class&nbsp;level: {{ form.school_class }}</label>
       <label>Enrol&nbsp;date: {{ form.enrol_date }}</label>
       <label>Status: {{ form.status }}</label>
 
